# rlmp

./: Cargo.toml  README.md
data/: names.txt
src/: basic.rs  cli.rs  main.rs  utils.rs
src/cache/: cache.rs  mod.rs  persistent.rs
src/fetch/: client.rs  lip.rs  mod.rs  weather.rs  wikipedia.rs
src/models/: geocode.rs  latlon.rs  lip.rs  lonlat.rs  mod.rs  wikipedia.rs
src/models/forecast/: daily.rs  forecast.rs  forecast_request.rs  forecast_response.rs  hourly.rs  intensity.rs  mod.rs  units.rs  wmo_code.rs
src/state/: mod.rs  state.rs  weekday_data.rs  weekday_state.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/widgets/: chart_type.rs  info_type.rs  mod.rs  today.rs  weekday.rs
src/tui/widgets/charts/: mod.rs  rain.rs  snow.rs  temp.rs  wind.rs
tests/: example_forecast.json  example_wiki.json
