[package]
name = "rlmp"
version = "1.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { version = "1.0" }
chrono = { version = "0.4.44", features = [ "serde" ] }
clap = { version = "4.5.51", features = [ "derive", "string" ] }
reqwest = { version = "0.13.2", features = [ "json", "query", "multipart" ] }
regex = { version = "1.12.3" }
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.52.1", features = [ "full" ] }
ratatui = { version = "0.30.0" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = { version = "0.3.31" }
serde_json = { version = "1.0" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[lints.clippy]
needless_return = "allow"
